# posturepai

./: .env  ARCHITECTURE.md  DEVELOPMENT.md  README.md  docs-google-oauth-investigation.md  index.html  package-lock.json  package.json
.lovable/: plan.md
backend/: .env  .env.example  .gitignore  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  alert.py  gamification.py  session.py  snapshot.py  user.py
backend/app/routers/: alerts.py  auth.py  gamification.py  insights.py  sessions.py  snapshots.py
backend/app/schemas/: alert.py  auth.py  gamification.py  insights.py  session.py  snapshot.py
backend/app/services/: auth_service.py  gamification_service.py  insights_service.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
src/: App.tsx  index.css  main.tsx
src/components/: AuthHashHandler.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
src/context/: AuthContext.tsx
src/hooks/: useAuth.ts  useBreakReminder.ts  useGamification.ts  useNotifications.ts  usePoseDetection.ts  usePostureHistory.ts  usePostureSession.ts  useTheme.tsx
src/lib/: exportData.ts
src/pages/: Auth.tsx  Dashboard.tsx  History.tsx  Index.tsx
supabase/: config.toml
supabase/migrations/: 20260209144625_d7a57a0f-2a54-4c01-9d3f-0e47c77d236f.sql  20260209160955_99f0f3ab-9756-493f-abb7-2e0ee5cd73ef.sql  20260209170229_ce899822-a3ad-4885-8107-070434d79c83.sql  20260209171228_cab4203f-0812-4ed5-a975-6db14ce25ca7.sql  20260210192847_dd22b928-bfeb-499e-a95d-105c8add4ffb.sql  20260210192958_231fa2a7-b1db-453f-8fb5-70b78f2a607b.sql  20260210193324_6d7a6338-f791-4603-a2ff-0e7dc58f8412.sql
(+37 files in other folders)
